# data-pipeline

./: .gitignore
govease-unified/: .env.example  Checkpoints.md  README.md  debug_chatbot.py  ingest.py  pyproject.toml  query_test.py  render.yaml  requirements-dev.txt  requirements-production.txt  vercel.json
govease-unified/backend/: __init__.py  requirements.txt  start.py
govease-unified/docs/: FILE_AUDIT.md  UNIFIED_ARCHITECTURE.md  api-integration.md  architecture.md  citizen-expansion-task-plan.md  codex-workstream-checklist.md  data-governance.md  data-sources.md  demo-runbook.md  evaluation-report.md  form-validation-sources.md  frontend-architecture.md  one-page-summary.md  raw-data-extraction-plan.md  render-deployment.md
govease-unified/frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
govease-unified/govease_ai/: __init__.py  assistant.py  chunking.py  embeddings.py  guidance.py  index_manifest.py  intent_parser.py  model_config.py  procedure_data.py  retrieval.py  semantic_validation.py  validation.py
govease-unified/schemas/: enriched_structured.schema.json  normalized_structured.schema.json  raw_structured.schema.json
govease-unified/scripts/: analyze_procedures.py  apply_citizen_semantic_resolutions.py  audit_citizen_production_readiness.py  audit_citizen_semantic_risks.py  audit_procedure_coverage.py  build_citizen_catalog.py  build_co_con_nho_workflow.py  build_cu_tru_giay_to_workflow.py  build_dien_luc_nha_o_dat_dai_workflow.py  build_enriched_priority_dataset.py  (+22 more)
main/: dvc_bundle.js  (+8 more)
(+8678 files in other folders)
