[project]
name = "govease-ai"
version = "0.2.0"
description = "Backend API for Vietnamese public administrative procedure guidance"
requires-python = ">=3.12,<3.13"
dependencies = [
  "chromadb==1.5.9",
  "fastapi==0.111.0",
  "openai==2.45.0",
  "python-dotenv==1.0.1",
  "uvicorn==0.30.1",
]

[dependency-groups]
dev = [
  "httpx==0.27.0",
  "sentence-transformers==3.0.1",
]

[tool.uv]
package = false
